# TEST_REPO_toy_flashsim

./: CMakeLists.txt  CMakeLists_old.txt  README.md  XN2N.csv  YN.csv  YN2N.csv  context0.csv  context1.csv  context10.csv  context11.csv  context2.csv  context3.csv  context4.csv  context5.csv  context6.csv  context7.csv  context8.csv  context9.csv  gen.npy  real.csv  samples0.csv  toy_flashsim.cpp  toy_flashsim_trial.cpp  toy_nflows_v4.py  y.csv
